--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,8 +1,7 @@
-<div class="h-screen bg-black">
+<div class="h-screen bg-indigo-600">
     <div class="container h-full mx-auto xl:px-30 max-w-6xl">
-        <div class="grid grid-cols-4 h-full">
-            <div class="col-span-3 lg:col-span-2 border-x-[1px] border-neutral-800">
-              </div>
+        <div class="grid grid-cols-4 gap-4 h-full">
+             <app-cards *ngFor="let product of products"/>
         </div>
     </div>
 </div>
