--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,3 +1,4 @@
+<app-navbar />
 <div class="h-screen bg-indigo-600">
     <div class="container h-full mx-auto xl:px-30 max-w-6xl">
         <div class="grid grid-cols-4 gap-4 h-full">
