--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -6,6 +6,7 @@
         <a href="#">
             <h5 class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white">{{products.title}}</h5>
         </a>
+        <p class="text-white font-semibold ">{{products.description}}</p>
         <div class="flex items-center justify-between">
             <span class="text-3xl font-bold text-gray-900 dark:text-white">{{products.price}}</span>
             <a href="#"
